--- a/package.json
+++ b/package.json
@@ -9,21 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.22",
     "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "express-validator": "^7.2.0",
+    "helmet": "^7.1.0",
     "mongoose": "^8.5.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-native": "0.74.3",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.2.0"
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.15.3",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.2.0",
+    "react-native-vector-icons": "^10.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
